# simula-ad

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
artifacts/: ctr_model.joblib  model_metadata.json
reports/: calibration_metrics.json  calibration_report.md  data_validation.json  data_validation.md  drift_metrics.json  drift_report.md  evaluation.json  feature_importance.json  feature_importance.md  latency_benchmark.json  latency_benchmark.md  model_report.md  production_readiness_review.md  recording_script.md  sample_ranked_output.json
scripts/: batch_predict.py  drift_report.py  evaluate_model.py  latency_benchmark.py  rank_candidates.py  train_model.py
src/simula_ctr/: __init__.py  api.py  config.py  data.py  drift.py  evaluate.py  features.py  predict.py  production_reports.py  ranker.py  schemas.py  train.py  validation.py
tests/: test_api.py  test_data.py  test_drift.py  test_features.py  test_production_polish.py  test_ranker.py  test_train.py
