[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simula-ctr"
version = "0.1.0"
description = "CTR prediction and campaign ranking system skeleton for Simula contextual ads."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "catboost>=1.2,<2.0",
  "fastapi>=0.110,<1.0",
  "joblib>=1.3,<2.0",
  "pandas>=2.0,<3.0",
  "pydantic>=1.10,<3.0",
  "scikit-learn>=1.3,<2.0",
  "uvicorn[standard]>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.25,<1.0",
  "pytest>=7.4,<9.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
